# korszam1f19va

./: README.md  ez egy txt file.txt
elso_hf/: fifth.cpp  first.cpp  math_hw.cpp  math_hw.h  third.cpp
harmadik-hf/: CMakeLists.txt  readme.txt
korszam_01korr/: nd_korszamhf_corrected.cpp  readme.txt
masodik bead/: matrix.h  readme.txt  test_matrix.cpp
masodik-hf/: main.cpp  vector2.h
